--- a/style.css
+++ b/style.css
@@ -203,6 +203,85 @@ nav ul li:nth-child(2) a {
 
 
 
+/*==========Our Stories section start==============*/
+
+.our-stories {
+    background: linear-gradient(red 80%, #FEA301 100%);
+    padding: 60px 0;
+    display: grid;
+    gap: 80px;
+}
+.our-stories-title {
+    font-size: 46px;
+    font-weight: 600;
+    text-align: center;
+}
+.our-stories div {
+    border-radius: 16px;
+}
+.our-stories img {
+    border-radius: 16px 16px 0 0;
+}
+.our-stories-cards {
+    display: flex;
+    gap: 20px;
+    margin: 0 auto;
+}
+.smalls-cards {
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    gap: 20px;
+}
+.big-card {
+    max-width: 540px;
+    height: 630px;
+    background-color: #fff;
+}
+.bog-card-content {
+    padding: 38px;
+}
+.big-card-title {
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 50px;
+}
+.big-card-description {
+    font-size: 16px;
+    font-weight: 500;
+    color: #666666;
+}
+.small-card {
+    max-width: 390px;
+    height: 300px;
+    background-color: #fff;
+}
+.date {
+    color: #fff;
+    background-color: #3CD8E8;
+    padding: 15px 16px;
+    font-family: "Raleway", serif;
+    font-size: 16px;
+    width: 174px;
+    height: 48px;
+    border-radius: 48px;
+    position: relative;
+    top: -31px;
+    left: 58px;
+}
+.small-card .date {
+    left: 38px;
+    padding: 10px 20px;
+    font-size: 14px;
+    height: 35px;
+}
+.our-stories .primary-btn {
+    background-color: black;
+    display: block;
+    margin: 0 auto;
+}
+
+
+
 
 
 
